<resources>
    <string name="app_name">MobileLoyaltyApp</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">History</string>
    <string name="tab_text_3">Ads</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_ads">Ads</string>
    <string name="menu_qr">Qr</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="profile">Profile</string>
    <string name="ads_title">Ads</string>
    <string name="QR">QR</string>
    <string name="history">History:</string>

    <string name="ads">Ads:</string>

    <string name="username">Username:</string>
    <string name="balance">Balance:</string>
    <string name="transactions">Transactions:</string>
    <string name="image_qr">QR Image</string>
    <string name="Balance_rur">Баллы:</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="backButton">backButton</string>
    <string name="bikeAd">bikeAd</string>
    <string name="mobileAd">Mobile Ad</string>
    <string name="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque dignissim enim sit amet venenatis. Fermentum odio eu feugiat pretium nibh ipsum consequat. A erat nam at lectus urna duis convallis convallis. Nisl purus in mollis nunc sed. Mauris a diam maecenas sed enim ut sem viverra aliquet. Pretium quam vulputate dignissim suspendisse in. Nunc vel risus commodo viverra maecenas. Ac feugiat sed lectus vestibulum. Faucibus in ornare quam viverra. Condimentum mattis pellentesque id nibh tortor id. Diam in arcu cursus euismod quis. Justo nec ultrices dui sapien eget. Venenatis cras sed felis eget velit aliquet. Vitae tortor condimentum lacinia quis vel eros donec ac odio. Diam in arcu cursus euismod. Velit euismod in pellentesque massa placerat duis ultricies.   </string>
</resources>
