<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ProfileFragment">

    <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/llayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="260dp">

                <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="312dp"
                        android:contentDescription="@string/Balance_rur"
                        app:srcCompat="@drawable/screenshot16" />

                <ImageView
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/backButton"
                        app:srcCompat="@android:drawable/ic_menu_revert" />

            </androidx.cardview.widget.CardView>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="199dp"
                    android:padding="20px"
                    android:text="@string/paragraph" />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="199dp"
                    android:padding="20px"
                    android:text="@string/paragraph" />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="199dp"
                    android:padding="20px"
                    android:text="@string/paragraph" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="199dp"
                    android:padding="20px"
                    android:text="@string/paragraph" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>