<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:gravity="top"
                                                       android:orientation="vertical"
    >


        <TextView
                style="@style/tag_name"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/textView6"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                style="@style/tag_name"
                android:text="@string/balance"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6" android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <TextView
                style="@style/tag_name"
                android:text="@string/transactions"
                android:layout_width="wrap_content"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:id="@+id/textView9"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:ems="10"
                android:id="@+id/username_edit"
                app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginStart="48dp"
                android:layout_marginLeft="48dp" app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:ems="10"
                android:id="@+id/balance_edit"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/username_edit"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:ems="10"
                android:id="@+id/transactions_edit"
                app:layout_constraintTop_toTopOf="@+id/textView9" app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/balance_edit"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>